Attempted fix to Navbar body content overlap

--- a/main/sticky-footer-navbar.css
+++ b/main/sticky-footer-navbar.css
@@ -8,6 +8,11 @@ body {
   /* Margin bottom by footer height */
   margin-bottom: 60px;
 }
+@media (max-width: 979px) {
+  body {
+    padding-top: 0px;
+  }
+}
 .footer {
   position: absolute;
   bottom: 0;
